# kursauswahl_server

./: .gitignore  Cargo.toml  Procfile  README.md  rust-toolchain
client/scripts/localization/: langselect.js  localization.js
client/scripts/util/: logged.js
client/sites/: admin_dashboard.html  notadmin.html  user_dashboard.html  welcome.html
db_setup/: setup_courses.sql  setup_tables.sql
src/: main.rs  setup.sql  utils.rs
src/alogic/: mod.rs
src/db/: course_system.rs  mod.rs  selection_system.rs  setup.sql  user_system.rs
src/localization/: mod.rs
src/routes/: api.rs  files.rs  mod.rs  sites.rs  testing.rs
src/server_logic/: mod.rs
src/slogic/: UserStructs.rs  Uservalidation.rs  mod.rs
src/structures/: mod.rs
